--- a/website/ClientApp/src/components/MainPage/Mainpage.css
+++ b/website/ClientApp/src/components/MainPage/Mainpage.css
@@ -9,7 +9,7 @@
     position: relative;
     width: 100%;
     height: 10vh;
-    margin-top: -1vh;
+  
     place-content: center;
     background-size: cover;
     
@@ -42,12 +42,31 @@
     height: 400px;
     background: url('https://www.incimages.com/uploaded_files/image/1920x1080/getty_481564534_65139.jpg');
 }
-.shedule_text{
-    
-    background-color: tomato;
-    height: 300px;
-    width: 100%;
-    margin: 0 auto;
-    opacity: 0.33;
-    z-index: 11;
+@media (max-width: 1441px) {
+    .news_preview .container_all h1{
+        
+        font-size: 60px;
+        
+    }
+}
+@media (max-width: 1025px) {
+    .news_preview .container_all h1{
+        
+        font-size: 45px;
+        
+    }
+}
+@media (max-width: 769px) {
+    .news_preview .container_all h1{
+        
+        font-size: 38px;
+        
+    }
+}
+@media (max-width: 426px) {
+    .news_preview .container_all h1{
+        
+        font-size: 30px;
+        
+    }
 }
