--- a/website/ClientApp/src/components/AdminPage/AdminPage.css
+++ b/website/ClientApp/src/components/AdminPage/AdminPage.css
@@ -27,12 +27,11 @@
 .menu_admin{
     height: 90vh;
     width: 30%;
-   
     display: flex;
 }
 .other_admin{
     position: relative;
-    display: grid;
+   
     place-items: center;
     height: 90vh;
     width: 55%;
@@ -50,10 +49,11 @@
     width: 50%;
 }
 .sub_menu{
-    
     height: 80%;
-    width: 50%;
+    max-width: 50%;
+   
     margin: auto 0 0;
+    
 }
 .main_menu ul{
     list-style: none;
@@ -70,7 +70,6 @@
     background: rgb(143, 171, 207);
 }
 .sub_menu ul li:hover{
-    
     background: rgb(143, 171, 207);
 }
 
@@ -78,12 +77,14 @@
     list-style: none;
     display: flex;
     flex-direction: column;
-    font-size: 30px;
+    font-size: 20px;
     padding: 0;
     margin:0;
+    text-align: center;
+    font-weight: 600;
+    
 }
 .button_admin{
-    
     position: relative;
 }
 
@@ -102,16 +103,11 @@
     margin-bottom: 10px;
 }
 
-.popup{
-    
+.popup{   
     display: grid;
     place-items: center;
     width: 100%;
     height: 65%;
-   
-   
-  
-    
 }
 
 
@@ -167,3 +163,50 @@
 .admin_page2{
     position: absolute;
 }
+
+
+
+.slider_image{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+.slider_all  .image_with_delete{
+    position: relative;
+    
+}
+.slider_all img{
+    position: relative;
+    height: 200px;
+    margin: 10px;
+    width: 300px;
+}
+.image_with_delete i{
+    position: absolute;
+    color: blue;
+    left: 25px;
+    top:20px;
+    font-size: 20px;
+    overflow: auto;
+}   
+.image_with_delete i:hover{
+    cursor: pointer;
+    font-size: 25px;
+    transition: 0.5s;
+}
+
+.news_admin{
+    display: flex;
+    justify-content: center;
+}
+
+.news_admin .news{
+    background-color:  lavender;
+    border-radius: 10px;
+    margin:20px;
+    padding: 10px;
+}
+
+.news_admin img{
+
+}
+
