--- a/website/ClientApp/src/components/Speciality/CookingPage/CookingPage.css
+++ b/website/ClientApp/src/components/Speciality/CookingPage/CookingPage.css
@@ -13,6 +13,10 @@
     flex-direction: column;
     
 }
+.cook_page .container_all{
+    display: flex;
+    flex-direction: column;
+}
 .image_speciality img{
     opacity: 0.6;
     width: 100%;
