--- a/website/ClientApp/src/components/Speciality/OblikPage/OblikPage.css
+++ b/website/ClientApp/src/components/Speciality/OblikPage/OblikPage.css
@@ -1,3 +1,8 @@
+
+.oblik_page .container_all{
+    display: flex;
+    flex-direction: column;
+}
 .about_prof{
     font-size: 25px;
     font-style: italic;
