--- a/website/ClientApp/src/components/Speciality/SpecialityPage/SpecialityPage.css
+++ b/website/ClientApp/src/components/Speciality/SpecialityPage/SpecialityPage.css
@@ -1,31 +1,41 @@
 
-.container_speciality{
-    display: grid;
-    place-items: center;
+ .speciality .title{
     width: 100%;
-    justify-content: center;
-    align-items: center;
-    height: 800px;
-}
-
-.type_specilialities{
-   
-    width: 400px;
-    height: 500px;
-    border-radius: 30px;
-    background: wheat;
+    
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 
-.type_specilialities p{
-    text-align: center;
-    color: teal;
-    font-size: 30px;
-   padding: 10px 15px;
+ .speciality  .title{
+     text-align: center;
+    width: 100%;
+    height: 100%;
+    font-size: 40px;
+    font-weight: 800;
 }
 
-.type_specilialities p a:hover{
-  text-decoration: none;
+.speciality .container_all .about_opp{
+    width: 100%;
+    height: 250px;
+}
+
+.speciality .name_speciality{
+    font-size:35px ;
+    font-weight: 600;
+}
+.speciality .opp_speciality{
+    font-size:30px ;
+}
+.about_opp{
+    border-radius: 15px;
+    padding: 30px;
+    margin-top: 40px;
+    background: rgb(227, 255, 199);
+}
+.about_opp ul{
+    display: flex;
+    flex-direction: column;
+}
+.about_opp ul li{
+    margin-top: 10px;
 }
