--- a/website/ClientApp/src/components/HistoryPage/HistoryPage.css
+++ b/website/ClientApp/src/components/HistoryPage/HistoryPage.css
@@ -11,7 +11,10 @@
     color:rgb(0, 0, 0);
 
 }
-
+.historypage .container_all{
+    display: flex !important;
+    flex-direction: column !important;
+}
 .title_history h1:hover{
     font-size: 40px;
     font-weight: 800;
@@ -42,9 +45,11 @@
     display: flex;
 }
 
-.else_text{
+.else_text p{
     font-size: 20px;
-    margin: 20px 10px 70px 10px;
+    text-align: justify;
+    font-size: 20px;
+    margin: 25px 10px ;
 }
 .else_text .zavdannya{
     background-color:rgb(220, 244, 255);
@@ -65,4 +70,168 @@
 .else_text .zavdannya ol li {
     margin-top: 15px;
     
+}
+
+.text_history p{
+   
+}
+
+@media (max-width:1025px) {
+
+    .title_history h1{
+        font-size: 32px;
+        font-weight: 800;
+        color:rgb(0, 0, 0);
+    
+    }
+    .tsutata >.text{
+        font-size: 17px;
+        font-style: italic;
+        margin: 20px 30px 20px 20px ;
+        text-align: right;
+        display: flex;
+    }
+    .else_text p{
+        
+        text-align: justify;
+        font-size: 17px;
+        margin: 25px 10px ;
+    } 
+    .else_text .zavdannya h1{
+        font-size: 21px;
+       
+    }
+
+    .else_text .zavdannya{
+       
+        margin-top:20px;
+        font-size: 17px;
+        padding: 20px 10px 20px 10px;
+        border-radius: 10px;
+    }
+}
+
+@media (max-width:769px) {
+
+    .title_history h1{
+        font-size: 27px;
+        font-weight: 800;
+        color:rgb(0, 0, 0);
+    
+    }
+    .tsutata >.text{
+        font-size: 13px;
+        font-style: italic;
+        margin: 20px 30px 20px 20px ;
+        text-align: right;
+        display: flex;
+    }
+    .else_text p{
+        
+        text-align: justify;
+        font-size: 13px;
+        margin: 15px 10px ;
+    } 
+    .else_text .zavdannya h1{
+        font-size: 16px;
+       
+    }
+
+    .else_text .zavdannya{
+       
+        margin-top:20px;
+        font-size: 13px;
+        padding: 20px 10px 20px 10px;
+        border-radius: 10px;
+    }
+}
+
+@media (max-width:426px) {
+
+    .title_history h1{
+        font-size: 20px;
+        font-weight: 800;
+        color:rgb(0, 0, 0);
+    
+    }
+    .tsutata {
+        display: flex;
+        flex-direction: column;
+    }
+    .tsutata img{
+        height: 50%;
+        width: 50%;
+        margin: 10px;
+        
+    }
+    .tsutata >.text{
+        font-size: 12px;
+        font-style: italic;
+        margin: 10px ;
+        text-align: justify;
+        display: flex;
+    }
+    .else_text p{
+        
+        text-align: justify;
+        font-size: 12px;
+        margin: 10px ;
+    } 
+    .else_text .zavdannya h1{
+        font-size: 14px;
+       
+    }
+
+    .else_text .zavdannya{
+       
+        margin-top:20px;
+        font-size: 12px;
+        padding: 10px;
+        border-radius: 10px;
+    }
+}
+
+@media (max-width:376px) {
+
+    .title_history h1{
+        font-size: 17px;
+        font-weight: 800;
+        color:rgb(0, 0, 0);
+    
+    }
+    .tsutata {
+        display: flex;
+        flex-direction: column;
+    }
+    .tsutata img{
+        height: 50%;
+        width: 50%;
+        margin: 10px;
+        
+    }
+    .tsutata >.text{
+        font-size: 12px;
+        font-style: italic;
+        margin: 10px ;
+        text-align: justify;
+        display: flex;
+    }
+    .else_text p{
+        
+        text-align: justify;
+        font-size: 12px;
+        margin: 10px ;
+    } 
+    .else_text .zavdannya h1{
+        font-size: 14px;
+       
+    }
+
+    .else_text .zavdannya{
+       
+        margin-top:20px;
+        font-size: 12px;
+        padding: 10px;
+        border-radius: 10px;
+    }
 }
