--- a/website/ClientApp/src/components/Speciality/OblikPage/OblikPage.css
+++ b/website/ClientApp/src/components/Speciality/OblikPage/OblikPage.css
@@ -7,3 +7,23 @@
     font-size: 25px;
     font-style: italic;
 }
+@media (max-width:1025px) {
+    .about_prof{
+        font-size:22px; 
+    }
+}
+@media (max-width:769px) {
+    .about_prof{
+        font-size:16px; 
+    }
+}
+@media (max-width:426px) {
+    .about_prof{
+        font-size:14px; 
+    }
+}
+@media (max-width:376px) {
+    .about_prof{
+        font-size:13px; 
+    }
+}
