--- a/website/ClientApp/src/components/StudentPage/CallShedule/CallShedulePage.css
+++ b/website/ClientApp/src/components/StudentPage/CallShedule/CallShedulePage.css
@@ -9,14 +9,16 @@
     text-align: center;
     border-collapse: collapse;
     background: #353e57 !important;
-    margin: 50px;
+    margin: 50px auto;
   }
-   .table_dark  th {
+   .table_dark  th  {
+     text-align: center !important;
     color: #EDB749 !important;
     border-bottom: 1px solid #37B5A5;
     padding: 12px 17px;
   }
   .table_dark  td {
+    text-align: center !important;
     color: #CAD4D6 !important;
     border-bottom: 1px solid #37B5A5;
     border-right:1px solid #37B5A5;
@@ -28,4 +30,192 @@
   .table_dark td:last-child {
     border-right: none;
   }
+
+  @media (max-width:1441px) {
+    .table_shedule{
+      width: 100%;
+      display: grid;
+      place-items: center;
+  }
+   .table_dark {
+      font-size: 30px;
+      width: 750px;
+      text-align: center;
+      border-collapse: collapse;
+      background: #353e57 !important;
+      margin: 40px auto;
+    }
+     .table_dark  th {
+      color: #EDB749 !important;
+      border-bottom: 1px solid #37B5A5;
+      padding: 12px 17px;
+    }
+    .table_dark  td {
+      color: #CAD4D6 !important;
+      border-bottom: 1px solid #37B5A5;
+      border-right:1px solid #37B5A5;
+      padding: 7px 17px;
+    }
+     .table_dark  tr:last-child td {
+      border-bottom: none;
+    }
+    .table_dark td:last-child {
+      border-right: none;
+    }
+  }
+  @media (max-width:1025px) {
+    .table_shedule{
+      width: 100%;
+  }
+   .table_dark {
+      font-size: 25px;
+      width: 600px;
+      text-align: center;
+      border-collapse: collapse;
+      background: #353e57 !important;
+      margin: 30px auto;
+    }
+     .table_dark  th {
+      color: #EDB749 !important;
+      border-bottom: 1px solid #37B5A5;
+      padding: 10px 15px;
+    }
+    .table_dark  td {
+      color: #CAD4D6 !important;
+      border-bottom: 1px solid #37B5A5;
+      border-right:1px solid #37B5A5;
+      padding: 7px 14px;
+    }
+    
+  }
+
+  @media (max-width:769px) {
+    .table_shedule{
+      width: 100%;
+  }
+   .table_dark {
+      font-size: 20px;
+      width: 500px;
+      text-align: center;
+      border-collapse: collapse;
+      background: #353e57 !important;
+      margin: 50px auto;
+    }
+     .table_dark  th {
+      color: #EDB749 !important;
+      border-bottom: 1px solid #37B5A5;
+      padding: 7px 12px;
+    }
+    .table_dark  td {
+      color: #CAD4D6 !important;
+      border-bottom: 1px solid #37B5A5;
+      border-right:1px solid #37B5A5;
+      padding: 7px 12px;
+    }
+    
+  }
+
+  @media (max-width:674px) {
+   .callshedule .container_all{
+     width: 90%;
+   }
+   .table_dark {
+      font-size: 17px;
+      width: 470px;
+      text-align: center;
+     
+      margin: 40px auto;
+    }
+     .table_dark  th {
+      color: #EDB749 !important;
+      border-bottom: 1px solid #37B5A5;
+      padding: 7px 8px;
+    }
+    .table_dark  td {
+      color: #CAD4D6 !important;
+      border-bottom: 1px solid #37B5A5;
+      border-right:1px solid #37B5A5;
+      padding: 7px 8px;
+    }
+    
+  }
+
+  
+ 
+   @media (max-width:570px) {
+    
+    .table_dark {
+       font-size: 14px;
+       width: 400px;
+       text-align: center;
+      
+       margin: 40px auto;
+     }
+      .table_dark  th {
+       color: #EDB749 !important;
+       border-bottom: 1px solid #37B5A5;
+       padding: 7px 8px;
+     }
+     .table_dark  td {
+       color: #CAD4D6 !important;
+       border-bottom: 1px solid #37B5A5;
+       border-right:1px solid #37B5A5;
+       padding: 7px 8px;
+     }
+     
+   }
+ 
+  @media (max-width:426px) {
+    .table_shedule{
+      width: 100%;
+  }
+   .table_dark {
+      font-size: 13px;
+      width: 320px;
+      text-align: center;
+      border-collapse: collapse;
+      background: #353e57 !important;
+      margin: 50px auto;
+    }
+     .table_dark  th {
+      color: #EDB749 !important;
+      border-bottom: 1px solid #37B5A5;
+      padding: 3px 7px;
+    }
+    .table_dark  td {
+      color: #CAD4D6 !important;
+      border-bottom: 1px solid #37B5A5;
+      border-right:1px solid #37B5A5;
+      padding: 3px 7px;
+    }
+    
+  }
+
+
+  @media (max-width:376px) {
+    .table_shedule{
+      width: 100%;
+  }
+   .table_dark {
+      font-size: 12px;
+      width: 280px;
+      text-align: center;
+      border-collapse: collapse;
+      background: #353e57 !important;
+      margin: 50px auto;
+    }
+     .table_dark  th {
+      color: #EDB749 !important;
+      border-bottom: 1px solid #37B5A5;
+      padding: 4px 8px;
+    }
+    .table_dark  td {
+      color: #CAD4D6 !important;
+      border-bottom: 1px solid #37B5A5;
+      border-right:1px solid #37B5A5;
+      padding: 4px 8px;
+    }
+    
+  }
+
   
