--- a/website/ClientApp/src/components/EmployersPage/EmployersPage.css
+++ b/website/ClientApp/src/components/EmployersPage/EmployersPage.css
@@ -1,6 +1,6 @@
 .employers{
     padding: 20px;
-    
+    width: 100%;
     height: fit-content;
     border-radius: 8px;
     margin: 20px;
@@ -47,28 +47,26 @@
 }
 @media(max-width:1025px){
     .employers{
-        padding: 15px;
-        
-        
-        margin: 15px;
+        padding: 0px;  
+        margin: 15px 0;
         
     }
     
     .employers_title{
         display: grid;
         place-items: center;  
-        margin: 40px 0 0 0 ; 
+        margin: 30px 0 0 0 ; 
       
     }
     .employers_title h1{
         font-weight: 800;
-        font-size: 40px;
+        font-size: 35px;
     }
     
     .emp{
         display: flex;
-        margin: 40px;
-        box-shadow: 20px 20px #5d9bc7;
+        margin: 40px 0;
+        box-shadow: 17px 17px #5d9bc7;
         align-items: center;
         border:  2px solid rgb(0, 0, 0);  
     }
@@ -86,6 +84,121 @@
         font-weight: 700;
     }
     .emp .emp_image{
+       
         margin: 10px;
+    }
+}
+
+@media(max-width:769px){
+    .employers{
+        padding: 0px;
+        
+        
+        margin: 15px 0;
+        
+    }
+    
+    .employers_title{
+        display: grid;
+        place-items: center;  
+        margin: 30px 0 0 0 ; 
+      
+    }
+    .employers_title h1{
+        font-weight: 800;
+        font-size: 25px;
+    }
+    
+    .emp{
+        width: 100%;
+        display: flex;
+        
+        margin: 30px 0;
+        box-shadow: 17px 17px #5d9bc7;
+        align-items: center;
+        border:  2px solid rgb(0, 0, 0);  
+    }
+    .emp .emp_info{
+       
+        width: 40%;
+        height: 100%;
+        margin: 10px;
+    
+    }
+    .emp_info h2{
+        color: rgb(78, 77, 77);
+        font-size: 15px;
+    }
+    
+    .emp_info h1{
+        font-size: 25px;
+        color:rgb(44, 43, 43);
+        font-weight: 700;
+    }
+    .emp .emp_image{
+        width: 60%;
+         height: 100%;
+        margin: 10px;
+    }
+
+    .emp .emp_image img{  
+ width: 100%;
+    }
+}
+
+@media(max-width:426px){
+    .employers{
+        padding: 0px;
+        
+        
+        margin: 8px 0;
+        
+    }
+    
+    .employers_title{
+        display: grid;
+        place-items: center;  
+        margin: 30px 0 0 0 ; 
+      
+    }
+    .employers_title h1{
+        font-weight: 800;
+        font-size: 25px;
+    }
+    
+    .emp{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        margin: 30px 0;
+        box-shadow: 14px 14px #5d9bc7;
+        align-items: center;
+        border:  2px solid rgb(0, 0, 0);  
+    }
+    .emp .emp_info{
+        padding: 10px;
+        width: 100%;
+        height: 100%;
+        margin: 10px;
+    
+    }
+    .emp_info h2{
+        color: rgb(78, 77, 77);
+        font-size: 12px;
+    }
+    
+    .emp_info h1{
+        font-size: 16px;
+        color:rgb(44, 43, 43);
+        font-weight: 700;
+    }
+    .emp .emp_image{
+        width:75%;
+         height: 100%;
+        margin: 10px;
+    }
+
+    .emp .emp_image img{  
+ width: 100%;
     }
 }
