--- a/website/ClientApp/src/components/MainPage/components/Main_news.css
+++ b/website/ClientApp/src/components/MainPage/components/Main_news.css
@@ -15,8 +15,10 @@
     display: grid;
     width: 100%;
     grid-template-columns: 1fr 1fr;
+    grid-auto-rows: auto;
 }
 .info_news{
+    
     display: flex;
     flex-direction: column;  
 }
@@ -26,7 +28,7 @@
     margin: 20px;
     padding: 10px;
     border-radius: 10px;
-    height: 550px;
+    height: fit-content;
     align-items: center;
    
 }
@@ -75,14 +77,17 @@
         display: grid;
         width: 100%;
         grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto;
     }
-    
+    .info_news{
+        height: 100%;
+    }
     .one_news_main{
     
         margin: 20px;
         padding: 10px;
         border-radius: 10px;
-        height: 550px;
+        height: 100%;
         align-items: center;
        
     }
@@ -117,13 +122,15 @@
     
     
     
-    
+    .info_news{
+        height: 100%;
+    }
     .one_news_main{
     
         margin: 20px;
         padding: 10px;
         border-radius: 10px;
-        height: 550px;
+        height: 100%;
         align-items: center;
        
     }
@@ -143,12 +150,15 @@
 
 
 @media  (max-width:1025px){
-    
+    .info_news{
+        height: 100%;
+    }
     
     .grid_news{
         display: grid;
         width: 100%;
         grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto;
     }
     
     .one_news_main{
@@ -192,8 +202,9 @@
         margin: 15px;
         padding: 10px;
         border-radius: 10px;
-        height: 485px;
+        height: 100%;
         align-items: center;
+
        
     }
     .imagen{
@@ -230,7 +241,7 @@
         margin: 15px;
         padding: 10px;
         border-radius: 10px;
-        height: 485px;
+        height: 100%;
         align-items: center;
        
     }
@@ -268,13 +279,14 @@
         display: grid;
         width: 100%;
         grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto;
     }
     
     .one_news_main{
         margin: 15px;
         padding: 10px;
         border-radius: 10px;
-        height: 450px;
+        height: 100%;
         align-items: center;
        
     }
@@ -312,7 +324,7 @@
         margin: 15px;
         padding: 10px;
         border-radius: 10px;
-        height: 400px;
+        height: 100%;
         align-items: center;
        
     }
@@ -351,13 +363,14 @@
         display: grid;
         width: 100%;
         grid-template-columns: 1fr ;
+        grid-template-rows: auto;
     }
     
     .one_news_main{
         margin: 15px;
         padding: 10px;
         border-radius: 10px;
-        height: 420px;
+        height: fit-content;
         align-items: center;
        
     }
@@ -386,6 +399,8 @@
         font-size: 13px;
        
     }
+
+    
 
     
 }
