--- a/website/ClientApp/src/components/Shared/Page.css
+++ b/website/ClientApp/src/components/Shared/Page.css
@@ -1,5 +1,11 @@
+.page img{
+    height: 70vh;
+    width: 100%;
+    object-fit: contain;
+    margin: 20px;
+}
 .page{
-
+    margin: 40px;
 }
 
 .title_page{
